# CPP3_SmartCalc_v2.0

./: README.md
src/: .gitignore  Makefile  _main.cpp  readme.md  smartcalc_controller.cpp  smartcalc_controller.h  smartcalc_model.cpp  smartcalc_model.h  smartcalc_view.cpp  smartcalc_view.h  test.cpp  test_runner
src/calc/: CMakeLists.txt  calc.pro  credit.cpp  credit.h  credit.ui  deposit.cpp  deposit.h  deposit.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h
